# etabot

./: .gitignore  README.md  etabot.cabal  run-etabot.sh
src/EtaBot/: Main.hs
