name:           etabot
version:        0.1
synopsis:       Irc bot
description:    A simple IRC bot
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     mightybyte@mightybyte.net
build-type:     Simple
cabal-version:  >= 1.6
category:       Development

extra-source-files:
  README.md
  
Executable etabot
  hs-source-dirs: src
  main-is: EtaBot/Main.hs

  build-depends:
    base >= 4 && < 5,
    bytestring,
    haskell98,
    simpleirc,
    text

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-orphans

