name:           etabot
version:        0.2
synopsis:       Irc bot
description:    A simple IRC bot
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     mightybyte@mightybyte.net
build-type:     Simple
cabal-version:  >= 1.10
category:       Development

extra-source-files:
  README.md
  
Executable etabot
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: EtaBot/Main.hs

  build-depends:
    base >= 4 && < 5,
    bytestring,
    simpleirc >= 0.3 && < 0.4,
    text

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-orphans

